Opened 14 years ago

Closed 14 years ago

Last modified 14 years ago

#6740 closed bug (fixed)

libroot doesn't build with DEBUG defined

Reported by: anevilyak Owned by: zooey
Priority: normal Milestone: R1
Component: System/libroot.so Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Currently one cannot build/link libroot in debug mode due to some missing posix locale-related symbols (which probably don't end up in the release build due to the nature of the macros used).

Error:

Link libroot.so 
posix_gnu_iconv.o: In function `add_alias':
gconv_conf.c:(.text+0x57a): undefined reference to `__toupper_l'
gconv_conf.c:(.text+0x61f): undefined reference to `__toupper_l'
posix_gnu_iconv.o: In function `add_module':
gconv_conf.c:(.text+0x911): undefined reference to `__toupper_l'
gconv_conf.c:(.text+0x9b9): undefined reference to `__toupper_l'
posix_gnu_wcsmbs.o: In function `__wcsmbs_load_conv':
(.text+0x222c): undefined reference to `__toupper_l'
collect2: ld returned 1 exit status

Attachments (1)

libroot-debug.patch (639 bytes ) - added by kaliber 14 years ago.
proposed patch

Download all attachments as: .zip

Change History (5)

by kaliber, 14 years ago

Attachment: libroot-debug.patch added

proposed patch

comment:1 by kaliber, 14 years ago

patch: 01

comment:2 by zooey, 14 years ago

Status: newin-progress

comment:3 by zooey, 14 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev39380.

Kaliber, have you actually tested that patch?

I'm asking because it wasn't working for me, so I decided to drop the declarations for all those ..._l functions and replace the couple of uses with the standard functions.

in reply to:  3 comment:4 by kaliber, 14 years ago

Replying to zooey:

Kaliber, have you actually tested that patch?

I'm asking because it wasn't working for me, so I decided to drop the declarations for all those ..._l functions and replace the couple of uses with the standard functions.

My patch was a really workaround and it worked at least for gcc4.

Note: See TracTickets for help on using tickets.