Fix #6740: * remove declaration of ctype-..._l() functions, as we do not provide   them and they are not really needed by our hacked glibc * replace remaining invocations of isspace_l() and isupper_l() in glibc   with isspace() and isupper() respectively This allows libroot to be built in DEBUG mode, again.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39380 a95241bf-73f2-0310-859d-f6bbb57e9c96