src/system/libroot/posix/glibc/iconv/gconv_int.h
@@ -142,7 +142,7 @@ extern const char *__gconv_path_envvar attribute_hidden;
     tmp = result = __alloca (cp - (str) + 3 + suffix_len);		      \
     cp = (str);								      \
     while (*cp != '\0')							      \
-      *tmp++ = __toupper_l (*cp++, &_nl_C_locobj);			      \
+      *tmp++ = toupper(*cp++);			      \
     if (cnt < 2)							      \
       {									      \
 	*tmp++ = '/';							      \
